@@ -1,3 +1,6 @@
+Fri 29 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Sort (reverse) entries on index.html (nib)
+
 Thu 28 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Remove unnecessary templates from theme dir (nib-cli)
 	* Remove unnecessary assets from theme dir (nib)
